deployment/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otel-python-app
  namespace: otel-python
  labels:
    app: otel-python-app
    app.kubernetes.io/name: otel-python-app
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: otel-python-app
  replicas: 3
  template:
    metadata:
      labels:
        app: otel-python-app
        app.kubernetes.io/name: otel-python-app
      annotations:
        resource.opentelemetry.io/service.name: "otel-python-app"
        resource.opentelemetry.io/service.namespace: "otel-python"
    spec:
      restartPolicy: Always
      containers:
      - name: otel-python-app
        image: obsfrancisco/otel-python-app:v0.23.0
        ports:
          - containerPort: 8080
        startupProbe:
          httpGet:
            path: /healthz
            port: 8080
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
        imagePullPolicy: Always
