deployment/base/mysql.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: otel-python
  name: mysql
  labels:
    service_name: otel-python-app
  annotations:
    resource.opentelemetry.io/service.name: "otel-python-app"
    resource.opentelemetry.io/service.namespace: "otel-python"
spec:
  ports:
    - port: 3306
      targetPort: 3306
      protocol: TCP
  type: ClusterIP
  selector:
    app.kubernetes.io/name: mysql
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: otel-python
  name: mysql
  labels:
    service_name: otel-python-app
  annotations:
    resource.opentelemetry.io/service.name: "otel-python-app"
    resource.opentelemetry.io/service.namespace: "otel-python"
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: mysql
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mysql
    spec:
      restartPolicy: Always
      containers:
      - name: db-mysql
        image: mysql:8.0
#         command:
#           - "--default-authentication-plugin=mysql_native_password"
#           - "--character-set-server=utf8mb4"
#           - "--collation-server=utf8mb4_unicode_ci"
        ports:
          - containerPort: 3306
        imagePullPolicy: Always
