deployment/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: otel-python
  name: otel-python-app
  annotations:
    resource.opentelemetry.io/service.name: "otel-python-app"
    resource.opentelemetry.io/service.namespace: "otel-python"
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: otel-python-app
